<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".Signup">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/signup_name"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        android:hint="@string/name"
        android:drawablePadding="8dp"
        android:textColor="@color/black"
        android:autofillHints="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/signup_email"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:hint="@string/email"
        android:drawablePadding="8dp"
        android:textColor="@color/black"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/signup_username"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:hint="@string/username"
        android:drawablePadding="8dp"
        android:textColor="@color/black"
        android:autofillHints="@string/username"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/signup_password"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        android:textColor="@color/black"
        android:autofillHints="@string/password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/signup"
        android:id="@+id/signup_button"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        app:cornerRadius = "20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginRedirectText"
        android:text="@string/alreadyuser"
        android:layout_gravity="center"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"/>

</LinearLayout>

