<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".New_Meeting">

    <include layout="@layout/layout_action_bar" />

    <LinearLayout
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clActionBar">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/tvemail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"/>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/str_date"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:hint="@string/choose_date"
                android:autofillHints="@string/str_date" />

            <ImageView
                android:id="@+id/imgDate"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@null"
                android:src="@drawable/baseline_calendar_month_24" />


        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_time"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSelectedTime"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:hint="@string/choose_time"
                android:autofillHints="@string/str_time" />

            <ImageView
                android:id="@+id/imgTime"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@null"
                android:src="@drawable/baseline_schedule_24"/>
        </FrameLayout>

        <Button
            android:id="@+id/btnSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:minHeight="55dp"
            android:text="@string/str_title_schedule"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>